# CryptoStrategyTracker

./: .backfill_lock  .env.example  .gitignore  .process_info.json  .replit  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.updated  ML_FIXES.md  ML_SETUP.md  PROCESS_MANAGEMENT.md  README.md  add_more_data.py  advanced_ml.py  analyze_patterns_and_save.py  app.py  app.py.backup  app.py.fixing  backfill_2023_data.py  backfill_batch_1.py  backfill_database.py  backfill_progress.json  backfill_single_batch.py  binance_api.py  binance_file_listing.py  check_ml_data.py  check_processes.bat  check_processes.ps1  clean_reset_database.py  cleanup_duplicates.py  clear_backfill_lock.py  create_economic_tables.py  crypto_news.py  data_loader.py  data_utilities.py  database.py  database_extensions.py  db_check.py  db_ml_operations.py  decimal_float_fix.py  (+74 more)
.streamlit/: config.toml
CryptoApp_package/: .env.example  .gitignore  README.md  backfill_database.py  database.py  docker-compose.yml  pyproject.toml  start.sh
all_files/: Dockerfile  binance_api.py  sentiment_scraper.py
archive/: check_local_db.py  setup.py
attached_assets/: Pasted--DATABASE-EXTENSIONS-get-historical-data-called-for-BNBUSDT-1h-Connecting-to-databas-1745431785395.txt  Pasted--Processing-BTCUSDT-15m-2025-04-18-13-32-05-542-INFO-Fetching-monthly-kline-file-listing-for--1744979556812.txt  Pasted--powershell-ExecutionPolicy-Bypass-File-start-windows-ps1--1745418776851.txt  Pasted-2025-04-23-02-20-56-629-WARNING-Found-1-suspicious-timestamps-in-daily-file-2025-04-15-using-fi-1745371310102.txt  (+12 more)
src/: app.py
(+79 files in other folders)
