[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.75.0",
    "pandas>=2.1.0",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.30",
    "streamlit>=1.44.1",
    "toml>=0.10.2",
    "trafilatura>=2.0.0",
]
