[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptocurrency-trading-platform"
version = "1.0.0"
description = "Cryptocurrency Trading Analysis Platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.22.0",
    "pandas>=1.3.0",
    "pandas-ta>=0.3.14b0",
    "numpy>=1.20.0",
    "plotly>=5.8.0",
    "psycopg2-binary>=2.9.3",
    "requests>=2.27.1",
    "openai>=1.0.0",
    "nltk>=3.7",
    "trafilatura>=1.4.0"
]

[tool.setuptools]
packages = ["find:"]

[tool.setuptools.packages.find]
include = ["*"]
